# learnqml

./: .clang-format  .gitignore  CMakeLists.txt  FirstPage.qml  LICENSE  MovieListView.qml  README.md  diystyle.qml  icon.qrc  main.cpp  main.qml  moviemodel.h  qml.qrc  serialdriver.cpp  serialdriver.h
Login/: LoginPage.qml
Styles/: Flatland.qrc  Style.qml  Styles.pri  palette.cpp  palette.h  qmldir
Styles/Flatland/: DelayButton.qml  Dial.qml  Dialog.qml  Frame.qml  GroupBox.qml  Menu.qml  PageIndicator.qml  Popup.qml  ProgressBar.qml  RadioIndicator.qml  StackView.qml  SwitchIndicator.qml  TabBar.qml  Tumbler.qml
Styles/Massif/: ApplicationWindow.qml  BackgroundGradient.qml  CheckBox.qml  DelayButton.qml  Drawer.qml  Label.qml  Pane.qml  RangeSlider.qml  RoundButton.qml  SliderHandle.qml  SwitchDelegate.qml  ToolBar.qml
canvas/: CMakeLists.txt  main.qml
database/: CMakeLists.txt  main.cpp  main.qml  moviemodel.cpp
diystyle/: CMakeLists.txt  main.cpp  main.qml  qtquickcontrols2.conf
diystyle/Styles/: Massif.qrc  Styles.qrc
diystyle/Styles/Flatland/: BusyIndicator.qml  Button.qml  CheckBox.qml  ComboBox.qml  DialogButtonBox.qml  ItemDelegate.qml  MenuBar.qml  MenuItem.qml  Page.qml  RadioButton.qml  RoundButton.qml  ScrollIndicator.qml  SpinBox.qml  SwipeView.qml  Switch.qml  TextArea.qml  TextField.qml  ToolButton.qml  ToolSeparator.qml  ToolTip.qml
diystyle/Styles/Massif/: Button.qml  CheckDelegate.qml  CheckIndicator.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  MenuBarItem.qml  MenuSeparator.qml  RadioDelegate.qml  ScrollBar.qml  Slider.qml  StackView.qml  SwipeDelegate.qml  TabButton.qml
guard/: CMakeLists.txt
guard/src/: CMakeLists.txt  CollageGroup.cpp  CollageGroup.h  CollageGroupListModel.cpp  CollageGroupListModel.h  MainItem.qml  StatusBar.qml  main.cpp  main.qml  myclass.cpp  myclass.h  qml.qrc  qtquickcontrols2.conf
guard/src/Pages/: DialPage.qml  HomePage.qml  RecordPage.qml
guard/src/images/: images.qrc
guard/tools/: CMakeLists.txt
icons_theme/: CMakeLists.txt  icons.qrc  main.cpp  main.qml
icons_theme/icons/mytheme/: index.theme
layout/: CMakeLists.txt  main.qml
loader/: CMakeLists.txt  Page1.qml  main.cpp  main.qml  qml.qrc
pagemanager/: CMakeLists.txt  Page1.qml  Page2.qml  Page3.qml  TitleBar.qml  main.qml  qml.qrc
quickwidget/: CMakeLists.txt  HomePage.qml  homepagecontroller.cpp  homepagecontroller.h  main.cpp  mainwindow.cpp  mainwindow.ui  qmls.qrc  quickwidget_zh_CN.ts
serialdriver/: CMakeLists.txt  main.cpp  main.qml
textfield/: CMakeLists.txt
textfield/src/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
textfield/src/Styles/: MyTextField.qml  qmldir
textinput/: CMakeLists.txt  main.qml
