cmake_minimum_required(VERSION 3.5)

project(learnqml)

add_subdirectory(diystyle)
add_subdirectory(icons_theme)
add_subdirectory(serialdriver)
add_subdirectory(database)
add_subdirectory(quickwidget)
add_subdirectory(loader)
add_subdirectory(layout)
add_subdirectory(canvas)
add_subdirectory(pagemanager)
add_subdirectory(textinput)
